# wolf-shaper

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  Makefile.mk  README  README.md  Vagrantfile  bundle_source.sh  dpf-subwidgets.patch  make_release.sh  provision.sh
.github/workflows/: dpf-makefile-action.yml  linux-ci.yml  msvc  msvc.yml  test.yml  wolf-shaper.yml
docs/: README.md  docinfo-footer.html  index.html  wolf-shaper.adoc
dpf/dgl/: Base.hpp  Makefile.mk  Window.hpp
dpf/dgl/src/: NanoVG.cpp  Window.cpp
dpf/dgl/src/nanovg/: fontstash.h
dpf/dgl/src/pugl/: pugl_x11.c
dpf/distrho/: DistrhoUI.hpp  DistrhoUtils.hpp  IdleThread.hpp
dpf/distrho/src/: DistrhoDefines.h  DistrhoUI.cpp  DistrhoUIInternal.hpp  IdleThread.cpp
libs/DSPFilters/include/DspFilters/: Utilities.h
pkg/arch/: .SRCINFO  PKGBUILD
pkg/debian/: changelog  control  copyright  install  rules  watch  wolf-shaper.desktop
pkg/debian/source/: include-binaries
plugins/: Makefile.mk
plugins/WaveShaper/: DistrhoPluginInfo.h  Makefile  Mathf.hpp  Utils.hpp  WaveShaperPlugin.cpp  WaveShaperUI.cpp  WaveShaperUI.hpp
plugins/WaveShaper/Config/: Config.hpp  ConfigManager.hpp
plugins/WaveShaper/Config/Themes/: default.conf
plugins/WaveShaper/Config/src/: Config.cpp  ConfigManager.cpp
plugins/WaveShaper/Libs/FIRFilter/: FIRFilter.hpp
plugins/WaveShaper/Resources/Fonts/: chivo_italic.cpp  roboto_light.cpp  roboto_light.hpp
plugins/WaveShaper/Structures/: Graph.hpp  Layout.hpp  ObjectPool.hpp  Stack.hpp
plugins/WaveShaper/Structures/src/: Graph.cpp  Layout.cpp
plugins/WaveShaper/Structures/test/: Main.cpp  Makefile  TestGraph.cpp  TestStack.cpp
plugins/WaveShaper/Utils/: Mathf.hpp  StringManipulation.hpp  Utils.hpp
plugins/WaveShaper/Utils/Fonts/: Makefile  getchunk.cpp  ttf2cpp.sh
plugins/WaveShaper/Widgets/: GeometricalWidgets.hpp  GraphNode.hpp  GraphNodes.hpp  GraphNodesLayer.hpp  GraphWidget.hpp  GraphWidgetSocket.hpp  NanoButton.hpp  NanoKnob.hpp  NanoSlider.hpp  NanoSwitch.hpp  NanoWheel.hpp  OversampleWheel.hpp  RemoveDCSwitch.hpp  ResetGraphButton.hpp  ResizeHandle.hpp  TestWidget.hpp  VertexWidget.hpp  VolumeKnob.hpp
plugins/WaveShaper/Widgets/src/: GraphNode.cpp  GraphNodes.cpp  GraphNodesLayer.cpp  GraphWidget.cpp  GraphWidgetSocket.cpp  NanoButton.cpp  NanoKnob.cpp  NanoSlider.cpp  NanoSwitch.cpp  NanoWheel.cpp  OversampleWheel.cpp  RemoveDCSwitch.cpp  ResetGraphButton.cpp  ResizeHandle.cpp  VolumeKnob.cpp
plugins/wolf-shaper/: CMakeLists.txt  Config.hpp  DistrhoPluginInfo.h  Makefile  WolfShaperParameters.hpp  WolfShaperPlugin.cpp  WolfShaperUI.cpp  WolfShaperUI.hpp
plugins/wolf-shaper/Config/: Config.hpp
plugins/wolf-shaper/Config/Themes/: default.conf
plugins/wolf-shaper/Config/src/: Config.cpp
plugins/wolf-shaper/Libs/FIRFilter/: FIRFilter.cpp
plugins/wolf-shaper/Libs/TAL-Filter-2/: FilterHandler.h  OscNoise.h
plugins/wolf-shaper/Libs/zita-resampler/: resampler-table.cpp  resampler-table.hpp  resampler.cpp  resampler.hpp
plugins/wolf-shaper/Resources/Fonts/: chivo_bold.cpp  chivo_bold.hpp  chivo_italic.cpp  chivo_italic.hpp  roboto_light.cpp  roboto_light.hpp
plugins/wolf-shaper/Structures/: Array.hpp  Graph.hpp  ObjectPool.hpp  PeakFallSmooth.hpp  Stack.hpp
plugins/wolf-shaper/Structures/src/: Animation.cpp  Graph.cpp  Oversampler.cpp  ParamSmooth.cpp  PeakFallSmooth.cpp
plugins/wolf-shaper/Utils/: Mathf.hpp  bundle_source.sh
plugins/wolf-shaper/Utils/src/: Mathf.cpp
plugins/wolf-shaper/Widgets/: BipolarModeSwitch.hpp  GraphNode.hpp  GraphWidget.hpp  LabelContainer.hpp  MenuWidget.hpp  NanoButton.hpp  NanoKnob.hpp  NanoLabel.hpp  NanoSwitch.hpp  NanoWheel.hpp  RemoveDCSwitch.hpp  ResizeHandle.hpp  RightClickMenu.hpp  VolumeKnob.hpp
plugins/wolf-shaper/Widgets/src/: BipolarModeSwitch.cpp  GlowingLabelsBox.cpp  GraphNode.cpp  GraphWidget.cpp  LabelBox.cpp  LabelBoxList.cpp  LabelContainer.cpp  MenuWidget.cpp  NanoButton.cpp  NanoKnob.cpp  NanoWheel.cpp  OversampleWheel.cpp  ResizeHandle.cpp  (+3 more)
resources/fonts/Chivo/: SIL Open Font License.txt
src/: CMakeLists.txt  Config.hpp  DistrhoPluginInfo.h  Makefile  WolfShaperParameters.hpp  WolfShaperPlugin.cpp  WolfShaperUI.cpp  WolfShaperUI.hpp
src/Resources/Fonts/: chivo_italic.hpp
src/Structures/: Animation.hpp  Array.hpp  Graph.hpp  Layout.hpp  Margin.hpp  ObjectPool.hpp  Oversampler.hpp  ParamSmooth.hpp  PeakFallSmooth.hpp  Ringbuffer.hpp  Stack.hpp
src/Structures/src/: Animation.cpp  Graph.cpp  Layout.cpp  Margin.cpp  Oversampler.cpp  ParamSmooth.cpp  PeakFallSmooth.cpp
src/Utils/: Mathf.hpp  make_release.sh
src/Utils/src/: Mathf.cpp
src/Widgets/: ArrowButton.hpp  BipolarModeSwitch.hpp  GlowingLabelsBox.hpp  GraphNode.hpp  GraphWidget.hpp  LabelBox.hpp  LabelBoxList.hpp  LabelContainer.hpp  MenuWidget.hpp  NanoButton.hpp  NanoKnob.hpp  NanoLabel.hpp  NanoSwitch.hpp  NanoWheel.hpp  OversampleWheel.hpp  RemoveDCSwitch.hpp  ResetGraphButton.hpp  ResizeHandle.hpp  VolumeKnob.hpp  WidgetBar.hpp  WolfWidget.hpp
src/Widgets/src/: ArrowButton.cpp  BipolarModeSwitch.cpp  GlowingLabelsBox.cpp  GraphNode.cpp  GraphWidget.cpp  LabelBox.cpp  LabelBoxList.cpp  LabelContainer.cpp  MenuWidget.cpp  NanoButton.cpp  NanoKnob.cpp  NanoLabel.cpp  NanoSwitch.cpp  NanoWheel.cpp  OversampleWheel.cpp  RemoveDCSwitch.cpp  ResetGraphButton.cpp  ResizeHandle.cpp  VolumeKnob.cpp  WidgetBar.cpp  WolfWidget.cpp
tools/: build-windows.sh  format_code.sh
(+2 files in other folders)
